--- a/src/scss/blocks/_wysiwyg.scss
+++ b/src/scss/blocks/_wysiwyg.scss
@@ -20,9 +20,9 @@
   @extend .title--large
 }
 
-.wysiwyg h3 {
-  @extend .title--small
-}
+//.wysiwyg h3 {
+//  @extend .title--small
+//}
 
 .wysiwyg h4 {
   font-size: 20px;
