--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -6,7 +6,7 @@ html, body {
 
 html {
 	scroll-behavior: smooth;
-	background-color: rgb(39, 39, 39);
+	background-color: var(--primary-bg);
 }
 
 body {
