--- a/src/scss/base/_fontsAutoGen.scss
+++ b/src/scss/base/_fontsAutoGen.scss
@@ -1,35 +1,49 @@
 @font-face {
-	font-family: Gilroy;
+	font-family: Manrope;
 	font-display: swap;
-	src: url("../fonts/Gilroy-Regular.woff2") format("woff2"), url("../fonts/Gilroy-Regular.woff") format("woff");
+	src: url("../fonts/Manrope-ExtraBold.woff2") format("woff2"), url("../fonts/Manrope-ExtraBold.woff") format("woff");
+	font-weight: 800;
+	font-style: normal;
+}
+@font-face {
+	font-family: Manrope;
+	font-display: swap;
+	src: url("../fonts/Manrope-ExtraLight.woff2") format("woff2"), url("../fonts/Manrope-ExtraLight.woff") format("woff");
+	font-weight: 200;
+	font-style: normal;
+}
+@font-face {
+	font-family: Manrope;
+	font-display: swap;
+	src: url("../fonts/Manrope-Bold.woff2") format("woff2"), url("../fonts/Manrope-Bold.woff") format("woff");
+	font-weight: 700;
+	font-style: normal;
+}
+@font-face {
+	font-family: Manrope;
+	font-display: swap;
+	src: url("../fonts/Manrope-Light.woff2") format("woff2"), url("../fonts/Manrope-Light.woff") format("woff");
+	font-weight: 300;
+	font-style: normal;
+}
+@font-face {
+	font-family: Manrope;
+	font-display: swap;
+	src: url("../fonts/Manrope-Medium.woff2") format("woff2"), url("../fonts/Manrope-Medium.woff") format("woff");
+	font-weight: 500;
+	font-style: normal;
+}
+@font-face {
+	font-family: Manrope;
+	font-display: swap;
+	src: url("../fonts/Manrope-Regular.woff2") format("woff2"), url("../fonts/Manrope-Regular.woff") format("woff");
 	font-weight: 400;
 	font-style: normal;
 }
 @font-face {
-	font-family: Gilroy;
+	font-family: Manrope;
 	font-display: swap;
-	src: url("../fonts/Gilroy-Semibold.woff2") format("woff2"), url("../fonts/Gilroy-Semibold.woff") format("woff");
+	src: url("../fonts/Manrope-SemiBold.woff2") format("woff2"), url("../fonts/Manrope-SemiBold.woff") format("woff");
 	font-weight: 600;
-	font-style: normal;
-}
-@font-face {
-	font-family: Tektur;
-	font-display: swap;
-	src: url("../fonts/Tektur-Bold.woff2") format("woff2"), url("../fonts/Tektur-Bold.woff") format("woff");
-	font-weight: 700;
-	font-style: normal;
-}
-@font-face {
-	font-family: Tektur;
-	font-display: swap;
-	src: url("../fonts/Tektur-SemiBold.woff2") format("woff2"), url("../fonts/Tektur-SemiBold.woff") format("woff");
-	font-weight: 600;
-	font-style: normal;
-}
-@font-face {
-	font-family: Gilroy;
-	font-display: swap;
-	src: url("../fonts/Gilroy-Bold.woff2") format("woff2"), url("../fonts/Gilroy-Bold.woff") format("woff");
-	font-weight: 700;
 	font-style: normal;
 }
