--- a/src/scss/base/_titles.scss
+++ b/src/scss/base/_titles.scss
@@ -3,7 +3,7 @@
 	font-style: normal;
 	margin: 0;
 	&--extra-huge {
-		font-size: responsive 48px 120px;
+		font-size: responsive 48px 113px;
 		font-range: 768px 1440px;
 	}
 	&--huge {
@@ -28,7 +28,7 @@
 	&--secondary {
 		color: var(--secondary-font-color);
 	}
-	&--w-ligh {
+	&--w-light {
 		font-weight: 300;
 	}
 	&--w-regular {
