--- a/src/scss/blocks/_was.scss
+++ b/src/scss/blocks/_was.scss
@@ -31,6 +31,12 @@
 	margin-top: 24px;
 }
 
+.was__video {
+	aspect-ratio: 16/9;
+	overflow: hidden;
+	border-radius: 12px;
+}
+
 .was__splide-slide {
 	border-radius: 12px;
 	overflow: hidden;
