--- a/src/scss/blocks/_info.scss
+++ b/src/scss/blocks/_info.scss
@@ -52,6 +52,7 @@
 	border: 2px solid var(--secondary-font-color);
 	border-radius: 13px;
 	max-width: 564px;
+	cursor: pointer;
 }
 
 .info__invite-arrow {
