--- a/src/scss/blocks/_modal.scss
+++ b/src/scss/blocks/_modal.scss
@@ -1,8 +1,8 @@
 .modal__body {
-  padding: 48px 80px;
-  background-color: var(--primary-bg);
+  padding: 20px;
+  background-color: var(--white-bg);
   border-radius: 10px;
-  max-width: 850px;
+  max-width: 565px;
   width: 100%;
   @include mobile {
     padding: 48px 20px;
@@ -23,8 +23,8 @@
 .modal__close {
   width: 24px;
   height: 24px;
-  top: 32px;
-  right: 32px;
+  top: 20px;
+  right: 20px;
   @include mobile {
     top: 14px;
     right: 14px;
