--- a/src/scss/blocks/_program.scss
+++ b/src/scss/blocks/_program.scss
@@ -85,8 +85,7 @@
 }
 
 .program__speakers {
-	//display: grid;
-	display: none;
+	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(189px, 189px));
 	gap: 24px;
 }
