--- a/src/scss/blocks/_sponsors.scss
+++ b/src/scss/blocks/_sponsors.scss
@@ -1,12 +1,18 @@
 .sponsors {
 	padding: 85px 0;
 	background-color: #0F1426;
+	@include mobile {
+		padding: 50px 0;
+	}
 }
 
 .sponsors__items {
 	flex-wrap: wrap;
 	gap: 30px 75px;
 	justify-content: space-evenly;
+	@include mobile {
+		gap: 80px;
+	}
 }
 
 .sponsors__item {
