--- a/src/scss/blocks/_dis.scss
+++ b/src/scss/blocks/_dis.scss
@@ -11,6 +11,9 @@
 	min-height: 50vh;
 	position: sticky;
 	top: 0;
+	@include mobile {
+		min-height: 100vh;
+	}
 }
 
 .dis__card {
@@ -23,10 +26,23 @@
 	background-repeat: no-repeat;
 	background-position: right bottom;
 	min-height: 378px;
+	@include mobile {
+		padding: 0;
+	}
 }
 
 .dis__card-title {
 	font-size: 32px;
+	@include mobile {
+		font-size: 24px;
+	}
+	@include mobileXS {
+		font-size: 20px;
+	}
+}
+
+.dis__card-excerpt {
+	font-size: 18px;
 }
 
 .dis__card-title,
@@ -36,12 +52,20 @@
 
 .dis__card-wrap {
 	max-width: 633px;
+	@include mobile {
+		padding: 24px;
+	}
 }
 
 .dis__card-img {
 	position: absolute;
 	right: 0;
 	bottom: 0;
+	@include mobile {
+		position: static;
+		margin-top: 50px;
+		width: 100%;
+	}
 }
 
 .dis__section:first-child .dis__card .dis__card-img {
