--- a/src/scss/blocks/_info.scss
+++ b/src/scss/blocks/_info.scss
@@ -2,11 +2,18 @@
 	border-radius: 111px 111px 0 0;
 	background-color: #0F1426;
 	padding-bottom: 102px;
+	@include mobile {
+		border-radius: 50px 50px 0 0;
+		padding-bottom: 50px;
+	}
 }
 
 .info__anchors {
 	gap: 16px;
 	padding: 74px 0 64px;
+	@include mobile {
+		flex-direction: column;
+	}
 }
 
 .info__anchor {
@@ -15,6 +22,9 @@
 	background-color: var(--secondary-bg);
 	border-radius: 6px;
 	transition: background-color var(--hover-time) ease;
+	@include mobile {
+		width: 100%;
+	}
 }
 
 .info__anchor:hover {
@@ -25,6 +35,9 @@
 	padding-top: 142px;
 	background: url('../img/decor/info-decor.svg') no-repeat center;
 	background-size: 100%;
+	@include mobile {
+		padding-top: 0;
+	}
 }
 
 .info__inner.container {
@@ -45,6 +58,9 @@
 .info__invite {
 	margin-top: 87px;
 	gap: 22px;
+	@include mobile {
+		margin-top: 70px;
+	}
 }
 
 .info__invite-description {
@@ -60,4 +76,7 @@
 	height: 63px;
 	border-radius: 13px;
 	border: 2px solid var(--secondary-font-color);
+	@include mobile {
+		display: none;
+	}
 }
