--- a/src/scss/base/_titles.scss
+++ b/src/scss/base/_titles.scss
@@ -3,7 +3,9 @@
 	font-style: normal;
 	margin: 0;
 	&--extra-huge {
-		font-size: responsive 48px 113px;
+		//font-size: responsive 48px 113px;
+		//font-range: 768px 1440px;
+		font-size: responsive 48px 96px;
 		font-range: 768px 1440px;
 	}
 	&--huge {
@@ -11,11 +13,15 @@
 		font-range: 768px 1440px;
 	}
 	&--big {
-		font-size: responsive 32px 48px;
+		//font-size: responsive 32px 48px;
+		//font-range: 768px 1440px;
+		font-size: responsive 32px 40px;
 		font-range: 768px 1440px;
 	}
 	&--pre-big {
-		font-size: responsive 32px 40px;
+		//font-size: responsive 32px 40px;
+		//font-range: 768px 1440px;
+		font-size: responsive 28px 32px;
 		font-range: 768px 1440px;
 	}
 	&--large {
@@ -23,7 +29,9 @@
 		font-range: 768px 1440px;
 	}
 	&--pre-large {
-		font-size: responsive 24px 32px;
+		//font-size: responsive 24px 32px;
+		//font-range: 768px 1440px;
+		font-size: responsive 24px 28px;
 		font-range: 768px 1440px;
 	}
 	&--primary {
