--- a/src/scss/blocks/_buttons.scss
+++ b/src/scss/blocks/_buttons.scss
@@ -25,7 +25,8 @@
   background-color: var(--primary);
   color: var(--white-bg);
   border-radius: 92px;
-  font-size: 20px;
+  //font-size: 20px;
+  font-size: 18px;
   font-weight: 600;
   border: 1px solid transparent;
   @include mobile {
