--- a/src/scss/blocks/_dis.scss
+++ b/src/scss/blocks/_dis.scss
@@ -32,7 +32,8 @@
 }
 
 .dis__card-title {
-	font-size: 32px;
+	//font-size: 32px;
+	font-size: 24px;
 	@include mobile {
 		font-size: 24px;
 	}
@@ -42,7 +43,8 @@
 }
 
 .dis__card-excerpt {
-	font-size: 18px;
+	//font-size: 18px;
+	font-size: 16px;
 }
 
 .dis__card-title,
