--- a/src/scss/blocks/_was.scss
+++ b/src/scss/blocks/_was.scss
@@ -19,7 +19,8 @@
 
 .was__title {
 	padding: 8px 17px;
-	font-size: 26px;
+	//font-size: 26px;
+	font-size: 24px;
 	border-radius: 13px;
 	border: 1px solid var(--primary);
 }
@@ -50,6 +51,7 @@
 }
 
 .was__splide-slide img {
+	aspect-ratio: 4/3;
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
