prepare project/test prod

--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -1,15 +1,14 @@
 .text {
-	font-family: var(--font-main);
+	font-family: var(--font-secondary);
 	font-style: normal;
 	margin: 0;
+	&--big {
+		font-size: 32px;
+	}
 	&--large {
-		//font-size: responsive 20px 24px;
-		//font-range: 576px 1600px;
-		font-size: responsive 18px 20px;
-		font-range: 576px 1600px;
+		font-size: 20px;
 	}
 	&--medium {
-		//font-size: 20px;
 		font-size: 18px;
 	}
 	&--normal {
@@ -27,9 +26,6 @@
 	&--secondary {
 		color: var(--secondary-font-color);
 	}
-	&--orange {
-		color: var(--primary);
-	}
 	&--blue {
 		color: #4897FE;
 	}
@@ -37,22 +33,10 @@
 		color: #48EBFF;
 	}
 	&--brown {
-		color: #B2B1B7;
-	}
-	&--w-ligh {
-		font-weight: 300;
+		color: #FDFDFD80;
 	}
 	&--w-regular {
 		font-weight: normal;
-	}
-	&--w-medium {
-		font-weight: 500;
-	}
-	&--w-semibold {
-		font-weight: 600;
-	}
-	&--w-bold {
-		font-weight: 700;
 	}
 	&--uppercase {
 		text-transform: uppercase;
