--- a/src/scss/blocks/_loft.scss
+++ b/src/scss/blocks/_loft.scss
@@ -1,50 +1,51 @@
-.was {
+.loft {
 	padding: 100px 0;
 }
 
-.was__top {
+.loft__top {
 	display: grid;
 	grid-template-columns: minmax(380px, 419px) minmax(500px, 661px);
 	gap: 30px;
 	justify-content: space-between;
+	align-items: baseline;
 	margin-bottom: 50px;
 }
 
-.was__subtitle {
+.loft__subtitle {
 	line-height: 150%;
 }
 
-.was__grid {
+.loft__grid {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: repeat(2, 1fr);
-	gap: 20px;
-}
-
-.was__item {
-	aspect-ratio: 16/9;
-	border-radius: 10px;
-	overflow: hidden;
-	height: 100%;
-	width: 100%;
-	cursor: pointer;
-}
-
-.was__item:nth-child(1) {
-	grid-area: 1 / 1 / 3 / 3;
-}
-.was__item:nth-child(2) {
-	grid-area: 1 / 3 / 2 / 4;
-}
-.was__item:nth-child(3) {
-	grid-area: 2 / 3 / 3 / 4;
-}
-
-.was__bottom {
-	margin-top: 20px;
 	gap: 20px;
 	padding-bottom: 30px;
 	border-bottom: 1px solid transparent;
 	border-image: linear-gradient(90deg, #1999FF 0%, #FF8F00 100%);
 	border-image-slice: 1;
+}
+
+.loft__item {
+	aspect-ratio: 16/9;
+	border-radius: 10px;
+	overflow: hidden;
+	height: 100%;
+	width: 100%;
+}
+
+.loft__item:nth-child(1) {
+	grid-area: 1 / 1 / 3 / 3;
+}
+.loft__item:nth-child(2) {
+	grid-area: 1 / 3 / 2 / 4;
+}
+.loft__item:nth-child(3) {
+	grid-area: 2 / 3 / 3 / 4;
+}
+
+.loft__item img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
